[gd_scene load_steps=3 format=2]

[ext_resource path="res://dialog/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/chinese_font_theme.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="DialogBox" type="Control" parent="."]
visible = false
margin_left = 64.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 744.0

[node name="ColorRect" type="ColorRect" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.411765, 0.411765, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
text = "Test Text 中文测试"

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="Button" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 54.0
text = "打开"

[connection signal="tween_completed" from="DialogBox/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
